Commit data and MVC layer

--- a/CleanArch/CleanArch.Mvc/appsettings.json
+++ b/CleanArch/CleanArch.Mvc/appsettings.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
-        "UniversityIdentityDBConnection": "Server=BAHAAR-US-LAPTO;Database=UniversityIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-    },
+        "UniversityIdentityDBConnection": "Server=BAHAAR-US-LAPTO;Database=UniversityIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
