--- a/CleanArch/CleanArch.Mvc/CleanArch.Mvc.csproj
+++ b/CleanArch/CleanArch.Mvc/CleanArch.Mvc.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\CleanArch.Infra.Data.csproj" />
+    <ProjectReference Include="..\CleanArch.Infra.IoC\CleanArch.Infra.IoC.csproj" />
   </ItemGroup>
 
 </Project>
