--- a/CleanArch/CleanArch.Domain.Bus/CleanArch.Domain.Core.csproj
+++ b/CleanArch/CleanArch.Domain.Bus/CleanArch.Domain.Core.csproj
@@ -5,11 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="8.0.1" />
+    <Folder Include="Bus\" />
+    <Folder Include="Commands\" />
+    <Folder Include="Events\" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CleanArch.Domain.Bus\CleanArch.Domain.Core.csproj" />
+    <PackageReference Include="MediatR" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
