--- a/CleanArch/CleanArch.Domain/CleanArch.Domain.csproj
+++ b/CleanArch/CleanArch.Domain/CleanArch.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArch.Domain.Bus\CleanArch.Domain.Core.csproj" />
+  </ItemGroup>
+
 </Project>
